docs: Database ERD added

--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,11 @@ ALLOWED_HOSTS=localhost,127.0.0.1
 
 # Use SQLite locally (skip PostgreSQL setup)
 # Set to True to use db.sqlite3 and ignore DB_* vars
-USE_SQLITE=True
+USE_SQLITE=False
 
 # PostgreSQL settings (used when USE_SQLITE=False)
 DB_NAME=quizdb
 DB_USER=quizuser
-DB_PASSWORD=your-database-password
+DB_PASSWORD=newpassword
 DB_HOST=localhost
 DB_PORT=5432
